--- a/FluentEditor/ThemePalette/Styles/PaletteEditorStyles.xaml
+++ b/FluentEditor/ThemePalette/Styles/PaletteEditorStyles.xaml
@@ -387,7 +387,8 @@
                                                                     TickFrequency="0.05"
                                                                     TickPlacement="Outside"
                                                                     Value="{Binding TintOpacity, Mode=TwoWay}" />
-                                                                <ToggleSwitch
+                                                                <!-- Todo: Crash in release mode (https://github.com/microsoft/microsoft-ui-xaml/issues/1022) -->
+                                                                <!--<ToggleSwitch
                                                                     x:Uid="AcrylicTintLuminosityOpacitySwitch"
                                                                     Margin="8,8,8,0"
                                                                     IsOn="{Binding IsTintLuminosityOpacityOn, Mode=TwoWay}" />
@@ -402,7 +403,7 @@
                                                                     StepFrequency="0.05"
                                                                     TickFrequency="0.05"
                                                                     TickPlacement="Outside"
-                                                                    Value="{Binding TintLuminosityOpacity, Mode=TwoWay}" />
+                                                                    Value="{Binding TintLuminosityOpacity, Mode=TwoWay}" />-->
                                                             </StackPanel>
                                                         </Flyout>
                                                     </Button.Flyout>
